# ocr-example

./: README.md  main.py  pyproject.toml
.cursor/rules/: uv-project-management.mdc
